package ma.ensias.soa.notification_service.dto.subscription;

public enum PlanType {
    MONTHLY,
    ANNUAL
}
