package ma.ensias.soa.subscription_service.Enums;

public enum SubscriptionEventType {
    SUBSCRIPTION_CREATED,
    SUBSCRIPTION_RENEWED,
    SUBSCRIPTION_EXPIRED,
    SUBSCRIPTION_CANCELED
}
