package ma.ensias.soa.subscription_service.Enums;

public enum SubscriptionStatus {
    PENDING,
    ACTIVE,
    EXPIRED,
    CANCELED
}