package ma.ensias.soa.subscription_service.service;

import java.time.LocalDateTime;
import java.util.List;

import org.springframework.stereotype.Service;

import lombok.RequiredArgsConstructor;
import ma.ensias.soa.subscription_service.Enums.PaymentStatus;
import ma.ensias.soa.subscription_service.Enums.PlanType;
import ma.ensias.soa.subscription_service.Enums.SubscriptionEventType;
import ma.ensias.soa.subscription_service.Enums.SubscriptionStatus;
import ma.ensias.soa.subscription_service.client.PaymentClient;
import ma.ensias.soa.subscription_service.client.UserClient;
import ma.ensias.soa.subscription_service.dto.PaymentRequestDTO;
import ma.ensias.soa.subscription_service.dto.PaymentResponseDTO;
import ma.ensias.soa.subscription_service.dto.SubscriptionEvent;
import ma.ensias.soa.subscription_service.dto.UserDTO;
import ma.ensias.soa.subscription_service.entity.Subscription;
import ma.ensias.soa.subscription_service.kafka.SubscriptionEventProducer;
import ma.ensias.soa.subscription_service.repository.SubscriptionRepository;


@Service
@RequiredArgsConstructor
public class SubscriptionService {

    private final SubscriptionRepository repository;
    private final UserClient userClient;
    private final PaymentClient paymentClient;
    private final SubscriptionEventProducer eventProducer;
    private final int YEARLY_AMMOUNT = 499;
    private final int MONTHLY_AMMOUNT = 49;

    public Subscription createSubscription(Long userId, PlanType planType, boolean autoRenew) {
        UserDTO user = userClient.getUserById(userId);

        double amount = (planType == PlanType.ANNUAL)? YEARLY_AMMOUNT : MONTHLY_AMMOUNT;
        LocalDateTime startDate = LocalDateTime.now();
        LocalDateTime endDate = (planType == PlanType.ANNUAL)
                ? startDate.plusYears(1)
                : startDate.plusMonths(1);

        Subscription subscription = Subscription.builder()
                .userId(userId)
                .planType(planType)
                .price(amount)
                .startDate(startDate)
                .endDate(endDate)
                .status(SubscriptionStatus.PENDING)
                .autoRenew(autoRenew)
                .build();

        Subscription saved = repository.save(subscription);

        PaymentRequestDTO paymentRequest = PaymentRequestDTO.builder()
                .subscriptionId(saved.getId())
                .userId(userId)
                .email(user.getEmail())
                .amount(amount)
                .planType(planType)
                .build();

        PaymentResponseDTO paymentResponse = paymentClient.processPayment(paymentRequest);

        if ( paymentResponse.getStatus() == PaymentStatus.SUCCESS) {
            saved.setStatus(SubscriptionStatus.ACTIVE);
            repository.save(saved);

            eventProducer.publishEvent(SubscriptionEvent.builder()
                    .subscriptionId(saved.getId())
                    .userId(user.getId())
                    .email(user.getEmail())
                    .planType(planType)
                    .endDate(endDate)
                    .eventType(SubscriptionEventType.SUBSCRIPTION_CREATED)
                    .build());
        } else {
            saved.setStatus(SubscriptionStatus.CANCELED);
            repository.save(saved);
        }

        return saved;
    }


    public List<Subscription> getUserSubscriptions(Long userId) {
        return repository.findAllByUserId(userId);
    }

    public Subscription cancelAutoRenew(Long id) {
        Subscription sub = repository.findById(id)
            .orElseThrow(() -> new RuntimeException("Subscription not found with ID:" + id));
        
        sub.setAutoRenew(false);
        repository.save(sub); 
        
        return sub;
        
    }

    public Subscription cancelSubscription(long id) {
        Subscription sub = repository.findById(id)
            .orElseThrow(() -> new RuntimeException("Subscription not found with ID:" + id));

        sub.setStatus(SubscriptionStatus.CANCELED);
        repository.save(sub);
        
        return sub;
    }
}
